--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ tags: [qatools, yandex-qatools blog, testing]
 
                                 <div class="row">
                                     <div class="small-2 columns">
-                                        <h1><i class="icon-idea"></i></h1>
+                                        <h1><i class="icon-beaker"></i></h1>
                                     </div>
 
                                     <div class="small-10 columns">
@@ -134,7 +134,7 @@ tags: [qatools, yandex-qatools blog, testing]
 
                                 <div class="row">
                                     <div class="small-2 columns">
-                                        <h1><i class="icon-idea"></i></h1>
+                                        <h1><i class="icon-beaker"></i></h1>
                                     </div>
 
                                     <div class="small-10 columns">
