--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ tags: [qatools, yandex-qatools blog, testing]
                                     <div class="small-9 columns">
                                         <h4>Getting Started</h4>
 
-                                        <p>{{page.getting-started | markdownify}} </p>
+                                        {{page.getting-started | markdownify}}
                                     </div>
                                 </div>
 
