--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ description: "Page not found. Your pixels are in another canvas."
 <div class="hero">
     <div class="row">
         <h1>404 - NOT FOUND</h1>
-        <p><a href="{{site.url}}/">Back to main page</a></p>
+        <p><a href="{{site.baseurl}}/">Back to main page</a></p>
     </div>
 </div>
 
